@@ -424,6 +424,8 @@ following image formats are supported:
 @item Name @tab Encoding @tab Decoding @tab Comments
 @item .Y.U.V       @tab X @tab X
     @tab one raw file per component
+@item Alias PIX    @tab X @tab X
+    @tab Alias/Wavefront PIX image format
 @item animated GIF @tab X @tab X
     @tab Only uncompressed GIFs are generated.
 @item BMP          @tab X @tab X
